--- a/nbproject/project.properties
+++ b/nbproject/project.properties
@@ -28,6 +28,7 @@ dist.war=${dist.dir}/${war.name}
 endorsed.classpath=\
     ${libs.javaee-endorsed-api-6.0.classpath}
 excludes=
+file.reference.commons-lang3-3.4.jar=D:\\JAVA\\commons-lang3-3.4\\commons-lang3-3.4.jar
 includes=**
 j2ee.compile.on.save=true
 j2ee.copy.static.files.on.save=true
@@ -41,7 +42,8 @@ j2ee.platform.wsimport.classpath=${j2ee.server.home}/modules/webservices-osgi.ja
 j2ee.platform.wsit.classpath=
 j2ee.server.type=gfv3ee6
 jar.compress=false
-javac.classpath=
+javac.classpath=\
+    ${file.reference.commons-lang3-3.4.jar}
 # Space-separated list of extra javac options
 javac.compilerargs=
 javac.debug=true
@@ -63,6 +65,7 @@ javadoc.nonavbar=false
 javadoc.notree=false
 javadoc.preview=true
 javadoc.private=false
+javadoc.reference.commons-lang3-3.4.jar=D:\\JAVA\\commons-lang3-3.4\\commons-lang3-3.4-javadoc.jar
 javadoc.splitindex=true
 javadoc.use=true
 javadoc.version=false
